dataset1235/2025-2/805158916/users/3920620008/executions/2651470117_1626817775.log
== RUN (2025-08-25 14:04:46)
-- CODE: 
from math import *

raio=float(input())

area=  (pi)*raio**2
volume= 4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:03:51)
-- CODE: 
from math import *
raio= flot(input())
area=  (pi)*raio**2
volume= 4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    raio= flot(input())
          ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    raio= flot(input())
          ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    raio= flot(input())
          ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    raio= flot(input())
          ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    raio= flot(input())
          ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    raio= flot(input())
          ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:07:34)
-- CODE: 
from math import *

raio=float(input())

area=  (pi)*raio**2
volume= 4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:04:27)
-- CODE: 
from math import *

raio=flot(input())

area=  (pi)*raio**2
volume= 4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
